--- a/koansys/static/koansys.less
+++ b/koansys/static/koansys.less
@@ -1,4 +1,6 @@
 @import url('default.css');
+@import "bootstrap/less/bootstrap.less";
+@import "bootstrap/less/responsive.less";
 
 ///Default colors:
 	@white: #fff;
@@ -56,28 +58,24 @@ body {
     margin: 0;
 }
 
-#headerWrapper {
-	margin: 0 auto;
-	width: 1100px;
-	background-color: @contentBG;
-	
-	#banner {
-		background: url("@{kdoc_banner}") no-repeat;
-		width: 939px;
-		height: 176px;
-		margin: 0 auto;
-	}
-}
-
-
 #bodyWrapper {
 	margin: 0 auto;
-	width: 1100px;
 	background-color: @contentBG;
+	padding: 0 40px 25px 80px;
+	
+	#headerWrapper {
+		margin: 0 auto;
+		background-color: @contentBG;
+		
+		#banner {
+			background: url("@{kdoc_banner}") no-repeat;
+			height: 176px;
+			margin: 0 auto;
+		}
+	}
+
 	
 	#bodyContainer {
-		width: 936px;
-		padding: 25px;
 		margin: 0 auto;
 			
 		/**Navigation**/
