Adding correct bootstrap references
[#42158143]

--- a/koansys/static/koansys.less
+++ b/koansys/static/koansys.less
@@ -1,6 +1,6 @@
 @import url('default.css');
-@import "bootstrap/less/bootstrap.less";
-@import "bootstrap/less/responsive.less";
+@import "../../../zw-uer/build/src/bootstrap/less/bootstrap.less";
+@import "../../../zw-uer/build/src/bootstrap/less/responsive.less";
 
 ///Default colors:
 	@white: #fff;
