--- a/koansys/static/koansys.less
+++ b/koansys/static/koansys.less
@@ -10,6 +10,7 @@
 
 ///Default colors:
 	@white: #fff;
+	@light-white: #edeeec;
 	@gray-level1: #cccccc;
 	@gray-level2: #999999;
 	@gray-level3: #666666;
@@ -221,13 +222,26 @@ body {
 				font-weight: normal;
 				font-family: "bodyTextBold";
 				text-transform: uppercase;
+				color: @light-white;
+				text-shadow: 1px 1px 3px @black;
+				
+				a:link,
+				a:active,
+				a:visited {
+					color: @white !important;
+				}
+				
+				a:hover {
+					color: @purple-accent !important;
+				}
 			}
 			
 			h3, h4 {
-				font-size: 21px;
+				font-size: 19px;
 				font-weight: normal;
 				font-family: "bodyTextBold";
 				text-decoration: underline;
+				margin: 5px 0;
 				
 				a:link,
 				a:active,
@@ -400,6 +414,18 @@ body {
 							font-weight: normal;
 							padding: 0 20px 0 0;
 						}
+					}
+				}
+			}
+			
+			.functionsWrapper {
+				margin: 15px 0 0;
+				
+				#functions {
+					margin: 30px 0 0;
+					
+					h2 {
+						margin: 0;
 					}
 				}
 			}
