--- a/koansys/static/koansys.less
+++ b/koansys/static/koansys.less
@@ -24,6 +24,7 @@
 	@contentBG: #acabab;
 	@bodyText: #383737;
 	@h1Text: #212121;
+	@sidebarBG: #e0dfdf;
 	
 	@bottomNav: #261f30;
 	@topNav: #423b4d;
@@ -41,6 +42,8 @@
 	@navHeader: "images/navigate_header.png";
 	@bullet1: "images/bullet1.gif";
 	@bullet2: "images/bullet2.png";
+	@active_arrow: "images/active_arrow.png";
+	@parent_arrow: "images/parent_arrow.png";
 	
 ///Fonts:
 @font-face {
@@ -92,6 +95,7 @@ body {
     -moz-box-shadow: 0px 0px 4px 4px rgba(50, 50, 50,  0.5);
     box-shadow: 0px 0px 4px 4px rgba(50, 50, 50,  0.5);
 	
+	/**--HEADER--**/
 	#headerWrapper {
 		margin: 0 auto;
 		padding: 0 60px 0 0;
@@ -102,12 +106,11 @@ body {
 			margin: 0 auto;
 		}
 	}
-
 	
-	#bodyContainer {
+	/**--NAVIGATION--**/
+	#mainNavWrapper {
 		margin: 0 auto;
-		
-		/**NAVIGATION**/
+
 		#primary-nav-wrapper {    
 			margin: 0;
 			
@@ -169,7 +172,7 @@ body {
 					ul {
 						li {
 							padding: 2px 0;
-
+	
 	
 							a:hover {
 								background-color: transparent;
@@ -201,11 +204,110 @@ body {
 					}
 				}
 			}
-		}
-					
-		#contentWrapper {
-			padding: 25px 60px;
+		}	
+	}
+		
+	/**--BODY CONTENT--**/
+	#bodyContainer {
+		margin: 0 auto;
+		padding: 35px 15px;
+		
+		/**--SIDEBAR NAVIGATION--**/
+		.sidebarNav {
+			margin: 0 0 70px 0;
+			padding: 0;
+			background-color: @sidebarBG;
+			border: 1px solid @gray-level2;
+			list-style-type: none;
 			
+			li.header {
+				padding: 5px;
+				background-color: #929292;
+				border: 1px solid #7e7e7e;
+				text-align: center;
+				
+				a:link,
+				a:active,
+				a:visited {
+					margin: 0;
+					padding: 5px 0;
+					font-family: "headerText";
+					font-size: 22px;
+					color: #392e47;
+					text-shadow: none;
+					text-transform: lowercase;
+				}
+				
+				a:hover {
+					background-color: transparent;
+				}
+			}
+			
+			ul {
+				list-style-type: none;
+				margin: 0;
+				
+				li {
+					border-top: 1px solid @gray-level1;
+					
+					a:link,
+					a:active,
+					a:visited{
+						color: #808080;
+						padding: 6px 10px 6px 20px;
+						font-size: 15px;
+					}
+					
+					&:hover {
+					 	background-color: @green-accent;
+					}
+					
+					&:first-child {
+						border: 0;
+					}
+					
+					ul {
+						li {
+							padding: 0 0 0 40px;
+						}
+					}
+				}
+				
+				li.hasChildren {
+					background: url("@{parent_arrow}") no-repeat 208px 11px;
+				}
+					
+			}
+			
+					
+		}
+		
+		.sidebarNav.affix {
+			top: 40px;
+		}
+		
+		.sidebarNav li > a {
+			display: block;
+			padding: 0;
+			width: 190px \9;
+		}
+		
+		.sidebarNav ul > .active > a {
+			background: url("@{active_arrow}") no-repeat 215px 7px @green-accent;
+			color: @white !important;
+			text-shadow: 1px 1px 2px @gray-level4;
+			border-bottom: 1px solid @gray-level2;
+			font-size: 17px !important;
+		}
+		
+		
+		.sidebarNav > li > a:hover {
+			background-color: #f5f5f5;
+		}
+
+
+		/**--MAIN BODY--**/
+		.span8 {
 			h1 {
 				font-family: "headerText";
 				font-weight: normal;
@@ -270,8 +372,16 @@ body {
 				color: @purple-accent;
 			}
 			
-			.section {
-				margin: 15px 0 20px 0;
+			.sphinxsidebar {
+				float: left;
+				width: 250px;
+				min-height: 200px;
+				margin: 0;
+				padding: 0;
+			}
+			
+			section {
+				margin: 30px 0;
 				
 				blockquote {
 					border-left: 0;
@@ -300,51 +410,7 @@ body {
 					}
 				}
 			}
-							
-			ul {
-				list-style-image: url("@{bullet1}");
-				list-style-type: none;
-				padding: 0 0 0 20px;
-				margin: 0 0 20px 0;
-				font-family: "bodyTextBold";
-				
-				li {
-					padding: 0 0 10px 0;
-					
-					a:link,
-					a:active,
-					a:visited {
-						padding: 0 0 20px 0;
-						color: @bodyText;
-						font-family: "bodyTextBold";
-						font-size: 17px;
-					}
-				
-					ul {
-						margin: 5px 0 0;
-						padding: 0 0 0 10px;
-						list-style-image: none;
-						
-						li {
-							background: url("@{bullet2}") no-repeat left 6px;
-							padding: 3px 0 3px 20px;
-							
-							a:link,
-							a:active,
-							a:visited{
-								color: @purple-accent !important;
-								font-size: 15px;
-								
-								em {
-									font-style: normal;
-								}
-							}
-						}
-					}
-				}
-				
-			}
-			
+									
 			#searchbox {
 				margin: 15px 0 0;
 				
@@ -429,22 +495,132 @@ body {
 					}
 				}
 			}
+		
+			ul {
+				list-style-image: url("@{bullet1}");
+				list-style-type: none;
+				padding: 0 0 0 20px;
+				margin: 0 0 20px 0;
+				font-family: "bodyTextBold";
+				
+				li {
+					padding: 0 0 10px 0;
+					
+					a:link,
+					a:active,
+					a:visited {
+						padding: 0 0 20px 0;
+						color: @bodyText;
+						font-family: "bodyTextBold";
+						font-size: 17px;
+					}
+				
+					ul {
+						margin: 5px 0 0;
+						padding: 0 0 0 10px;
+						list-style-image: none;
+						
+						li {
+							background: url("@{bullet2}") no-repeat left 6px;
+							padding: 3px 0 3px 20px;
+							
+							a:link,
+							a:active,
+							a:visited{
+								color: @purple-accent !important;
+								font-size: 15px;
+								
+								em {
+									font-style: normal;
+								}
+							}
+						}
+					}
+				}
+				
+			}
 		}
+
+				
 	}
 	
-	.footer {
-		padding: 15px 30px;
-		background-color: @footerBG;
-		color: @footerText;
-		border-top: 1px solid @gray-level3;
-		font-size: 14px;
+	/**--FOOTER--**/
+	#footerWrapper {
+		margin: 70px auto 0;
 		
-		a:link,
-		a:active,
-		a:visited {
-			color: @gray-level1;
+		.footer {
+			padding: 15px 30px;
+			background-color: @footerBG;
+			color: @footerText;
+			border-top: 1px solid @gray-level3;
+			font-size: 14px;
+			clear: both;
+			
+			a:link,
+			a:active,
+			a:visited {
+				color: @gray-level1;
+			}
 		}
 	}
 		
 }
 
+
+/* Responsive
+-------------------------------------------------- */
+
+/* Desktop large
+------------------------- */
+@media (min-width: 1200px) {
+	.sidebarNav {
+		width: 235px;
+		margin: 0 50px 70px 0;
+	}
+	
+	.sidebarNav > li > a {
+		width: 220px \9; /* Override the previous IE8-9 hack */
+	}
+}
+
+/* Desktop
+------------------------- */
+@media (max-width: 980px) {
+/* When affixed, space properly */
+	.sidebarNav {
+		top: 0;
+		width: 235px;
+		margin: 0 50px 70px 0;
+	}
+}
+
+/* Tablet to desktop
+------------------------- */
+@media (min-width: 768px) and (max-width: 979px) {
+	/* Adjust sidenav width */
+	.sidebarNav {
+		width: 150px;
+		margin: 0 50px 70px 0;
+	}
+	
+	.sidebarNav.affix {
+		top: 0;
+	}
+}
+
+/* Tablet
+------------------------- */
+@media (max-width: 767px) {
+
+	/* Sidenav */
+	.sidebarNav {
+		width: auto;
+		margin: 0 50px 70px 0;
+	}
+	
+	.sidebarNav.affix {
+		position: static;
+		width: auto;
+		top: 0;
+	}
+}
